trying to keep the banner fixed on mobile

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -60,6 +60,7 @@ a:visited {
     text-align: center;
     display: table-cell;
     background-color: #245B89;
+    position: fixed;
 }
 
 .banner-title {
